portability (Klaus), and XIM (Derrick).

Getting ready to release 0.9.2 soonish.
----------------------------------------------------------------------
Tue Dec  4 16:38:15 2001                        Michael Jennings (mej)

Updated e-mail address for namsh at his request.
----------------------------------------------------------------------
Thu Dec 13 15:14:33 2001                        Michael Jennings (mej)

An update to a previous patch from Paul Brannan <pbranna@clemson.edu>.
----------------------------------------------------------------------
Fri Dec 14 15:17:14 2001                        Michael Jennings (mej)

termcap fix from Fredrik Svensson <fred@ludd.luth.se> and another
mod to Paul's patch.
----------------------------------------------------------------------
Sat Dec 29 15:39:38 2001                        Michael Jennings (mej)

Fixed a little-endian bug with 24-bit XImages, added a bit to
init_locale() in an effort to replicate the behavior of the Athena
widgets, and added a -b option to Esetroot based on a patch from
Oliwier Ptak <supergrass@gmx.net>.
----------------------------------------------------------------------
Sat Dec 29 16:09:42 2001                        Michael Jennings (mej)

Use AC_PROG_AWK to detect gawk/nawk/awk.
----------------------------------------------------------------------
Mon Dec 31 16:28:46 2001                        Michael Jennings (mej)

Minor debugging enhancements.
----------------------------------------------------------------------
Thu Jan  3 12:38:54 2002                        Michael Jennings (mej)

Fixed the select() call based on info from Paul W Brannan
<pbranna@clemson.edu>.  Also added check for _POSIX_SAVED_IDS.
----------------------------------------------------------------------
Thu Jan  3 12:42:41 2002                        Michael Jennings (mej)

This is better.
----------------------------------------------------------------------